# ouliers-library

./: .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  Makefile  README.md  main.cpp
include/: Bolshev.hpp  calculator.hpp  distributions.hpp  params.hpp  statistics.hpp  utils.hpp
include/Outlier/: Bolshev.hpp  Hawkings.hpp  calculator.hpp  distributions.hpp  params.hpp  statistics.hpp  utils.hpp
lib/: googletest
src/: Bolshev.cpp  Hawkings.cpp  calculator.cpp  statistics.cpp
tests/: test_generation.cpp
